--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.11"
+    "mongoose": "^5.10.11",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1"
