--- a/myblog/package.json
+++ b/myblog/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-validation": "^3.0.7",
+    "validator": "^13.1.17",
     "whatwg-fetch": "^3.4.1"
   },
   "scripts": {
