--- a/myblog/package.json
+++ b/myblog/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "react": "^16.13.1",
