--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "backend",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,6 +22,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.5.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
